--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
     <body>    
         <h1>私のプロフィール</h1>
         <p>こんにちは</p>
+        <img src="gengen.jpg" width="200" height="200"/>
         </body>
 </html>    
