--- a/index.html
+++ b/index.html
@@ -7,5 +7,15 @@
         <h1>私のプロフィール</h1>
         <p>こんにちは</p>
         <img src="gengen.jpg" width="200" height="200"/>
+        <table border>
+           <tr>
+               <td>名前</td>
+               <td>大友　淳平</td>
+           </tr>
+           <tr>
+               <td>出身地</td>
+               <td>神奈川県</td>
+            </tr>
+        </table>
         </body>
 </html>    
