リンクの追加

--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
            <tr>
                <td>出身地</td>
                <td>神奈川県</td>
-            </tr>
+           </tr>
+           <tr>
+               <td>Twitter</td>
+               <td><a href="https://twitter.com/twitterjp?lang=ja">Twitter Japan</a></td>
         </table>
         </body>
 </html>    
