--- a/index.html
+++ b/index.html
@@ -20,5 +20,12 @@
                <td>Twitter</td>
                <td><a href="https://twitter.com/twitterjp?lang=ja">Twitter Japan</a></td>
         </table>
+        
+        <p>好きな食べ物</p>
+        <ul>
+            <li>カレー</li>
+            <li>焼肉</li>
+            <li>ラーメン</li>
+        </ul>    
         </body>
 </html>    
