真ん中にキレイに並べたよ

--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
+<!DOCTYPE html>
 <html>
     <head>
         <title>私のプロフィール</title>
         <meta charset="utf-8"/>
+        <link rel="stylesheet" href="style.css" />
     </head>
     <body>    
         <h1>私のプロフィール</h1>
@@ -21,8 +23,8 @@
                <td><a href="https://twitter.com/twitterjp?lang=ja">Twitter Japan</a></td>
         </table>
         
-        <p>好きな食べ物</p>
-        <ul>
+        <p class="content-item">好きな食べ物</p>
+        <ul class="conent-item">
             <li>カレー</li>
             <li>焼肉</li>
             <li>ラーメン</li>
