こんにちは

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
         <link rel="stylesheet" href="style.css" />
     </head>
     <body>    
-        <h1>私のプロフィール</h1>
-        <p>こんにちは</p>
-        <img src="gengen.jpg" width="200" height="200"/>
-        <table border>
+        <h1 class="content-item">私のプロフィール</h1>
+        <p class="content-item">こんにちは</p>
+        <img src="domi.jpg" class="content-item"/>
+        <table border class="content-item">
            <tr>
                <td>名前</td>
                <td>大友　淳平</td>
@@ -25,9 +25,9 @@
         
         <p class="content-item">好きな食べ物</p>
         <ul class="conent-item">
-            <li>カレー</li>
-            <li>焼肉</li>
-            <li>ラーメン</li>
+            <li id="curry">カレー</li>
+            <li id="niku">焼肉</li>
+            <li id="men">ラーメン</li>
         </ul>    
         </body>
 </html>    
